# GPUFR

./: CMakeLists.txt  README.md
include/GPUFR/: bb_gen.hpp  cuda_safe_call.cuh  ff_math.cuh  lagrange_solver.cuh  ntt.cuh  nvrtc_helper.hpp  parser.hpp  types.h  types.hpp  vandermonde_solver.cuh  zippel.cuh
precomp/: gen_prime.py  primes_13.csv  primes_roots_13.csv  primitive.py
src/: CMakeLists.txt  bb_gen.cpp  ff_math.cu  lagrange_solver.cu  ntt.cu  parser.cpp  test.py  vandermonde_solver.cu  zippel.cu
tests/: CMakeLists.txt  bb_gen_test.cpp  cuda_test.cpp  cuda_test.cu  ff_test.cpp  ff_test.cu  lagrange_test.cu  ntt_test.cu  parser_test.cpp  parser_test.cu  univariate_interpolation_test.cu  vandermonde_test.cu  zippel_test.cu
